--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="bg-white shadow-sm border-b border-gray-200 overflow-x-auto no-scrollbar">
             <div class="container mx-auto px-4">
                 <ul class="flex items-center gap-8 text-sm font-medium text-gray-600 whitespace-nowrap py-3">
-                    <li id="nav-All" class="text-jio-blue border-b-2 border-jio-blue pb-3 -mb-3 cursor-pointer" onclick="filterCategory('All')">All Tools</li>
+                    <li id="nav-All" class="text-jio-blue border-b-2 border-jio-blue pb-3 -mb-3 cursor-pointer" onclick="filterCategory('All')">All</li>
                     <li id="nav-Calligraphy-Kit" class="hover:text-jio-blue cursor-pointer" onclick="filterCategory('Calligraphy Kit')">Calligraphy Kit</li>
                     <li id="nav-Qalam" class="hover:text-jio-blue cursor-pointer" onclick="filterCategory('Qalam')">Qalam</li>
                     <li id="nav-Ink" class="hover:text-jio-blue cursor-pointer" onclick="filterCategory('Ink')">Ink</li>
@@ -116,7 +116,7 @@
                 <!-- Hero Banner for Section -->
                 <div class="bg-gradient-to-r from-blue-100 to-blue-50 rounded-xl p-6 mb-6 flex items-center justify-between shadow-sm border border-blue-200">
                     <div>
-                        <h1 id="category-title" class="text-2xl md:text-3xl font-bold text-gray-800 mb-2">All Tools</h1>
+                        <h1 id="category-title" class="text-2xl md:text-3xl font-bold text-gray-800 mb-2">All</h1>
                         <p class="text-gray-600 mb-4">Minimum 33% Off on Daily Essentials. Stock up now!</p>
                         <button class="bg-jio-blue text-white px-6 py-2 rounded-full font-medium hover:bg-blue-700 transition shadow">View All Offers</button>
                     </div>
@@ -171,7 +171,7 @@
                 <div>
                     <h3 class="font-bold text-gray-800 mb-2">Shop by Category</h3>
                     <ul class="space-y-3 pl-2 text-gray-600">
-                        <li class="cursor-pointer py-1 hover:text-jio-blue" onclick="filterCategory('All'); closeMenu();">All Tools</li>
+                        <li class="cursor-pointer py-1 hover:text-jio-blue" onclick="filterCategory('All'); closeMenu();">All</li>
                         <li class="cursor-pointer py-1 hover:text-jio-blue" onclick="filterCategory('Calligraphy Kit'); closeMenu();">Calligraphy Kit</li>
                         <li class="cursor-pointer py-1 hover:text-jio-blue" onclick="filterCategory('Qalam'); closeMenu();">Qalam</li>
                         <li class="cursor-pointer py-1 hover:text-jio-blue" onclick="filterCategory('Ink'); closeMenu();">Ink</li>
@@ -311,7 +311,7 @@
                 activeItem.className = "text-jio-blue border-b-2 border-jio-blue pb-3 -mb-3 cursor-pointer";
             }
             
-            document.getElementById('category-title').innerText = category === 'All' ? 'All Tools' : category;
+            document.getElementById('category-title').innerText = category === 'All' ? 'All' : category;
             renderProducts(category);
         }
 
