--- a/admin.html
+++ b/admin.html
@@ -108,6 +108,61 @@
         if (products && products.length > 0) {
             const newItems = [
                 {
+                    id: 1,
+                    title: "Bamboo Qalam Set (7 Pens)",
+                    tag: "Qalam",
+                    price: 450,
+                    mrp: 600,
+                    image: "https://via.placeholder.com/400?text=Bamboo+Qalam",
+                    options: ['Mix Set']
+                },
+                {
+                    id: 2,
+                    title: "Calligraphy Ink - Black 30ml",
+                    tag: "Ink",
+                    price: 120,
+                    mrp: 150,
+                    image: "https://via.placeholder.com/400?text=Black+Ink",
+                    options: ['Black']
+                },
+                {
+                    id: 3,
+                    title: "Glossy Art Paper A4",
+                    tag: "Paper",
+                    price: 250,
+                    mrp: 350,
+                    image: "https://via.placeholder.com/400?text=Art+Paper",
+                    options: []
+                },
+                {
+                    id: 4,
+                    title: "Glass Inkwell Container",
+                    tag: "Ink container",
+                    price: 80,
+                    mrp: 120,
+                    image: "https://via.placeholder.com/400?text=Inkwell",
+                    options: []
+                },
+                {
+                    id: 5,
+                    title: "Beginner Calligraphy Kit",
+                    tag: "Calligraphy Kit",
+                    price: 999,
+                    mrp: 1499,
+                    image: "https://via.placeholder.com/400?text=Starter+Kit",
+                    options: [],
+                    description: "Complete set for beginners."
+                },
+                {
+                    id: 6,
+                    title: "Handmade Teak Qalam",
+                    tag: "Qalam",
+                    price: 300,
+                    mrp: 450,
+                    image: "https://via.placeholder.com/400?text=Teak+Qalam",
+                    options: ['3mm', '5mm']
+                },
+                {
                     id: 7,
                     title: "Copperplate Oblique Holder",
                     tag: "Qalam",
